added mobile styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div class="introHead">
             <h1 class="name text-effect">Matt Roger</h1>
             <h2 class="title text-effect">Web Developer | Photographer | Artist</h2>
-            <img src="assets/img/intro.jpg" alt="bison" class="intro">
+            <img src="assets/img/intro.jpg" alt="bison" class="intro full">
+            <img src="assets/img/introM.jpg" alt="bisonV" class="intro mobile">
             <nav class="introNav">
                 <a href="#about" class="text-effect">About</a>
                 <a href="#portfolio" class="text-effect">Portfolio</a>
@@ -37,7 +38,8 @@
     </Header>
     <section id="about">
         <div class="aboutWrapper">
-            <div class="wrapper aboutImgWrapper">
+            <img src="assets/img/aboutM.jpg" class="mobile aboutImgM">
+            <div class="wrapper aboutImgWrapper full">
                 <div class="aboutSwitch aboutHover">
                     <div class="quote">
                         <p>I went to the woods because</p>
@@ -88,20 +90,22 @@
     <section id="portfolio">
         <div class="wrapper">
             <h2 class="portfolioHeadText text-effect">Portfolio</h2>
-            <img src="assets/img/portfolio.jpg" class="portfolioHeadImg">
+            <img src="assets/img/portfolio.jpg" class="portfolioHeadImg full">
+            <img src="assets/img/portfolioM.jpg" class="portfolioHeadImg mobile">
             <div class="buttonGroup">
                 <button id="portBtn1"><a href="#mainContent">Group Projects</a></button>
                 <button id="portBtn2"><a href="#mainContent">Solo Projects</a></button>
                 <button id="portBtn3"><a href="#mainContent">Success With MailChimp</a></button>
-
             </div>
+        
         </div>
         <div class="portGroup" id="mainContent">
         </div>
     </section>
     <section id="contact">
         <div class="wrapper">
-            <img src="assets/img/contact.jpg" class="contactImg">
+            <img src="assets/img/contact.jpg" class="contactImg full">
+            <img src="assets/img/contactM.jpg" class="contactImg mobile">
             <div class="contactInfo">
                 <button class="btn hoverColor" id="emailBtn" data-clipboard-text="mattroger.webdev@gmail.com">
                     <i class="far fa-envelope"></i>
