ready to push, mostly working

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/contact.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic|Heebo:900|Pirata+One&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps|Gentium+Book+Basic|Heebo|Pirata+One&display=swap" rel="stylesheet">
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
     <script src="https://kit.fontawesome.com/e85b486770.js" crossorigin="anonymous"></script>
@@ -41,16 +41,11 @@
             <img src="assets/img/aboutM.jpg" class="mobile aboutImgM">
             <div class="wrapper aboutImgWrapper full">
                 <div class="aboutSwitch aboutHover">
-                    <div class="quote">
-                        <p>I went to the woods because</p>
-                        <p>I wished to live deliberately,</p>
-                        <p>to front only the essential facts of life</p>
-                        <p>and which shall never be seen again,</p>
-                        <p> and see if I could not learn what it had to teach,</p>
-                        <p> and not, when I came to die, </p>
-                        <p>discover that I had not lived</p>
+                    <div class="quote quote1">
+                        <p>To the attentive eye, each moment of the year has its own beauty, and in the same fields, it beholds, every hour, a picture which was never seen before and which shall never be seen again</p>
+                        <p>Ralph Waldo Emerson</p>
                     </div>
-                    <img src="assets/img/elk.jpg" class="aboutImg aboutHover">
+                    <img src="assets/img/elk.jpg" class="aboutImg ">
                 </div>
                 <div class="aboutSwitch2 aboutHover">
                     <div class="quote">
@@ -58,17 +53,15 @@
                         <p> but a hedgehog one important thing</p>
                         <p><i>Archilochus</i></p>
                     </div>
-                    <img src="assets/img/fox2.jpg" class="aboutImg aboutHover">
+                    <img src="assets/img/fox2.jpg" class="aboutImg">
                 </div>
                 <div class="aboutSwitch3 aboutHover">
-                    <div class="quote">
-                        <p>To the attentive eye, each moment of the year has its own beauty,</p>
-                        <p>and in the same fields, it beholds, every hour,</p>
-                        <p> a picture which was never seen before,</p>
-                        <p>and which shall never be seen again</p>
-                        <p>Ralph Waldo Emerson</p>
+                    <div class="quote quote3">
+                        <p>Do Or do not. </p>
+                        <p>There is no try</p>
+                        <p>Master Yoda</p>                        
                     </div>
-                    <img src="assets/img/bison.jpg" class="aboutImg aboutHover">
+                    <img src="assets/img/bison.jpg" class="aboutImg">
                 </div>
                 <nav class="aboutNav">
                     <a href="#about" class="btnLeft aboutNavBtn">About</a>
@@ -80,7 +73,7 @@
                 <div class="aboutTextNav">
                     <button id="aboutMeBtn">About Me</button>
                     <button id="techSkills">Tech Skills</button>
-                    <button id="socialSkills">Social Skills</button>
+                    <button id="socialSkills">Creative Process</button>
                 </div>
                 <div class="aboutTextBox"></div>
             </div>
@@ -98,8 +91,7 @@
                 <button id="portBtn3"><a href="#mainContent">Success With MailChimp</a></button>
             </div>
         
-        </div>
-        <div class="portGroup" id="mainContent">
+            <div class="portGroup" id="mainContent"></div>
         </div>
     </section>
     <section id="contact">
@@ -168,6 +160,7 @@
     <script src="assets/js/script.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/portfolio.js"></script>
+    <script src="assets/js/mailchimp.js"></script>
     <script src="assets/js/groupProjects.js"></script>
     <script src="assets/js/solo.js"></script>
 
