cleaned up mobile styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/contact.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps|Gentium+Book+Basic|Heebo|Pirata+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps|Courgette|Delius|Gentium+Book+Basic|Heebo|Pirata+One&display=swap" rel="stylesheet">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
@@ -42,13 +42,13 @@
             <div class="wrapper aboutImgWrapper full">
                 <div class="aboutSwitch aboutHover">
                     <div class="quote quote1">
-                        <p>To the attentive eye, each moment of the year has its own beauty, and in the same fields, it beholds, every hour, a picture which was never seen before and which shall never be seen again</p>
-                        <p>Ralph Waldo Emerson</p>
+                        <p class="">The clearest way into the Universe is through a forest wilderness.</p>
+                        <p class="">John Muir</p>
                     </div>
                     <img src="assets/img/elk.jpg" class="aboutImg ">
                 </div>
                 <div class="aboutSwitch2 aboutHover">
-                    <div class="quote">
+                    <div class="quote quote2">
                         <p>The fox knows many things</p>
                         <p> but a hedgehog one important thing</p>
                         <p><i>Archilochus</i></p>
@@ -57,9 +57,8 @@
                 </div>
                 <div class="aboutSwitch3 aboutHover">
                     <div class="quote quote3">
-                        <p>Do Or do not. </p>
-                        <p>There is no try</p>
-                        <p>Master Yoda</p>                        
+                        <p>It's an energy field created by all living things. It surrounds us and penetrates us. It binds the galaxy together.</p>
+                        <p>Obi-Wan Kenobi</p>                        
                     </div>
                     <img src="assets/img/bison.jpg" class="aboutImg">
                 </div>
@@ -150,8 +149,7 @@
     <footer>
         <div>
             <img src="assets/img/footer.jpg">            
-                <p class="footQuoteL1 text-effect">The clearest way into the Universe is through a forest wilderness.</p>
-                <p class="footQuoteL2 text-effect">John Muir</p>           
+                          
         </div>
     </footer>
 
