removed unused mobile const from about section. Added email and resized text in font

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                 <!-- data-clipboard-text uses clipboard.js library to copy text to clip board -->
                 <button class="btn hoverColor" id="emailBtn" data-clipboard-text="mattroger.webdev@gmail.com">
                     <i class="far fa-envelope"></i>
-                    Email Me!
+                    Email: <br>
+                    Mattroger.webdev@gmail.com
                 </button>
                 <a href="https://www.linkedin.com/in/matt-roger/">
                     <button class="hoverColor">
