added icons to footer

--- a/index.html
+++ b/index.html
@@ -186,19 +186,21 @@
 
     <footer>
       <div class="footer-links">
-        <a href="https://github.com/MattRoger/MattRoger.github.io" target="_blank"><p>The Repository</p></a>
-        <p>and</p>
+        <a href="https://github.com/MattRoger/MattRoger.github.io" target="_blank"><p>The Repository </p></a>
+        <img src = "assets/img/icons/icons8-source-code-100.png" class="icon">
+        <p> and </p>
         <a href="https://github.com/MattRoger/MattRoger.github.io/blob/master/README.md" target="_blank"><p>The Readme for this site</p></a>
+        <img src = "assets/img/icons/icons8-document-100.png" class="icon">
       </div>
       <div class="random-quote"></div>
       <div class="filler"></div>
     </footer>
-
+<!-- jQuery -->
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
     ></script>
-
+<!-- script tags for emailjs -->
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"
