fixed readme links, made icons in footer links, added links to redirect to project div when category is picked

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h1
         class="typewrite h1_title"
         data-period="2000"
-        data-type='[ "Web Developer", "Photographer", "Artist","Photoshop Wizard","Jedi Knight" ]'
+        data-type='[ "Web Developer", "Photographer", "Artist","Photoshop Wizard","Video Game Enthusiast","Jedi Knight" ]'
       >
         <span class="wrap"></span>
       </h1>
@@ -80,9 +80,9 @@
         <!--portfolio nav. wrapper added for style padding -->
         <div class="portfolio-nav-wrapper" id="portfolio_nav">
           <div class="portfolio-nav section-nav">
-            <p class="solo-project-link portfolio-link">Solo Projects</p>
-            <p class="group-project-link portfolio-link">Group Projects</p>
-            <p class="mail-project-link portfolio-link">Mail Chimp Projects</p>
+            <a href="#portfolio"><p class="solo-project-link portfolio-link">Solo Projects</p></a>
+            <a href="#portfolio"><p class="group-project-link portfolio-link">Group Projects</p></a>
+              <a href="#portfolio"><p class="mail-project-link portfolio-link">Mail Chimp Projects</p></a>
           </div>
         </div>
         <!-- This is where the js injects the html for the projects -->
@@ -187,11 +187,12 @@
 
     <footer>
       <div class="footer-links">
-        <a href="https://github.com/MattRoger/MattRoger.github.io" target="_blank"><p>The Repository </p></a>
-        <img src = "assets/img/icons/icons8-source-code-100.png" class="icon">
+        <a href="https://github.com/MattRoger/MattRoger.github.io" target="_blank"><p>The Repository </p>
+        <img src = "assets/img/icons/icons8-source-code-100.png" class="icon"></a>
         <p> and </p>
-        <a href="https://github.com/MattRoger/MattRoger.github.io/blob/master/README.md" target="_blank"><p>The Readme for this site</p></a>
-        <img src = "assets/img/icons/icons8-document-100.png" class="icon">
+        <a href="https://github.com/MattRoger/MattRoger.github.io/blob/master/README.md" target="_blank">
+          <p>The Readme for this site</p>
+        <img src = "assets/img/icons/icons8-document-100.png" class="icon" ></a>
       </div>
       <div class="random-quote"></div>
       <div class="filler"></div>
