changed wording in about section

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           <div class="skills-list skills-intro">
             <h3>The Skills That Pay The Bills</h3>
             <p>
-              "You can never learn to many skills. Here are some of the many
+              You can never learn to many skills. Here are some of the many
               tools in my tool box. I am a wizard in with Adobe Photoshop and I
               use those skills to enhance my front-end designs using CSS and
-              JavaScript."
+              JavaScript.
             </p>
           </div>
         </div>
