made changes suggested

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
       <!-- skills list. js appends the ul for each skill category -->
       <div class="tech-container">
         <div class="skills-wrapper">
-          <div class="skills-list skills-intro">
-            <h3>The Skills That Pay The Bills</h3>
+          <!-- <div class="skills-list skills-intro">
+            <h3>Skills</h3>
             <p>
               You can never learn to many skills. Here are some of the many
               tools in my tool box. I am a wizard in with Adobe Photoshop and I
               use those skills to enhance my front-end designs using CSS and
               JavaScript.
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
       <!-- creative process appended here -->
